fixed content not showing

--- a/less/footer.less
+++ b/less/footer.less
@@ -2,7 +2,7 @@
     color: #ffffff;
 }
 #footer-sidebar {
-    display:block;
+    display: inline-block;
     height: 250px;
 }
     
